# credit-risk-model

./: .gitignore  Ingestion.py  README.md  Retrieval.py  app.py  pyproject.toml  requirements.in  requirements.txt
data/data_sample/: POS_CASH_balance_sample.csv  application_test_sample.csv  bureau_balance_sample.csv  bureau_sample.csv  credit_card_balance_sample.csv  installments_payments_sample.csv  previous_application_sample.csv
data/processed/: feature_list.joblib
models/: LightGBM.joblib  XGBoost.joblib  log_reg.joblib
notebooks/: 01_eda.ipynb  02_modelling.ipynb  03_explainability.ipynb
src/credit_risk_model/: aggregations.py  config.py  data_cleaning.py  data_ingestion.py  feat_eng.py  model.py
src/credit_risk_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
