[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit_risk_model"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "duckdb",
    "matplotlib",
    "seaborn",
    "xgboost",
    "lightgbm",
    "optuna",
    "shap",
    "joblib",
    "streamlit",  
    "statsmodels"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]